:bug: Fix to avoid infinite redirection

--- a/electron-wallet/index.html
+++ b/electron-wallet/index.html
@@ -91,17 +91,20 @@
 
       // Fix for ubuntu
       const webview = document.querySelector('webview')
+      let reload = true
       webview.addEventListener('dom-ready', () => {
         (function myLoop (i) {
            setTimeout(function () {
               console.log(document.querySelector('webview').getTitle())
-              if(document.querySelector('webview').getTitle() !== 'GTD Wallet') {
+              if(document.querySelector('webview').getTitle() !== 'GTD Wallet' && reload == true) {
                 console.log('Reload')
                 document.querySelector('webview').reload()
+              } else {
+                reload = false
               }
               if (--i) myLoop(i);
            }, 5000)
-        })(99999);
+        })(50);
       })
     </script>
   </body>
