:rocket: Text added to tell user to have java

--- a/wallet-electron/index.html
+++ b/wallet-electron/index.html
@@ -31,6 +31,7 @@
 
     .loading__text {
       margin-top: -10px;
+      text-align: center;
     }
 
     .spinner {
@@ -81,7 +82,7 @@
       <div class="double-bounce1"></div>
       <div class="double-bounce2"></div>
     </div>
-    <p class="loading__text">Please wait, this can take a few minutes...</p>
+    <p class="loading__text">Please wait, this can take a few minutes... <br><br>Please ensure that Java is installed and the port 37876 is not locked.</p>
   </div>
 	<webview id="webview" src="http://localhost:37876/index.html"></webview>
 
