--- a/wallet-electron/index.html
+++ b/wallet-electron/index.html
@@ -82,7 +82,7 @@
       <div class="double-bounce1"></div>
       <div class="double-bounce2"></div>
     </div>
-    <p class="loading__text">Please wait, this can take a few minutes... <br><br>Please ensure that Java is installed and the port 37876 is not locked.</p>
+    <p class="loading__text">Please wait, this can take a few minutes... <br><br>Please ensure that Java is installed and the port 37876 is not locked.<br>If it keeps loading try to open in your browser http://localhost:37876</p>
   </div>
 	<webview id="webview" src="http://localhost:37876/index.html"></webview>
 
